Updated small templates properties file

--- a/root/swim_small/inputs/globalTemplate.properties
+++ b/root/swim_small/inputs/globalTemplate.properties
@@ -1,4 +1,4 @@
-# AO properties 
+# AO properties
 
 root.dir                                              = @ROOT.DIR@/
 command.file.dir                                      = daf/
@@ -36,7 +36,7 @@ daf.message.port = 8067
 daf.admin.port = 9067
 
 
-#AgForestFloorspace 
+#AgForestFloorspace
 agforest.floorspace.file = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/AgForestFloorspace.csv
 world.market.fieldnames.file = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/worldMarketFields.csv
 
@@ -311,12 +311,12 @@ acs.person.variables = SEX AGEP SCH ESR INDP OCCP
 aa.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/aa.properties
 
 aa.command.java = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
-aa.command.max.heap.size = 3000m
+# 3000m might be all that's required, but we have a lot more memory nowadays so lets use it.
+aa.command.max.heap.size = 6000m
 aa.command.log4j.config.file = info_log4j_aa.xml
-aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.9_r4259.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r4441.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
+aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/commons-math3-3.4.1.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.9_r4527.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r4526.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
 #aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/*;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
 aa.command.class = com.hbaspecto.oregon.pecas.aa.OregonAAControl
-aa.zoneConstantDecayFactor = 0.2
 
 # Path for input files
 aa.reference.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
@@ -344,6 +344,9 @@ aa.readActivityDollarDataForPI=true
 aa.updateImportsAndExports=false
 aa.visum=true
 
+# Alternate property if you want to build your own PECASZonesI.csv file manually and not have it clobbered.
+# aa.buildZoneFiles=false
+
 aa.detailedCommodities=A1-Mgmt Bus,B1-Prof Specialty,B2-Education,B3-Health,B4-Technical Unskilled,C1-Sales Clerical Professionals,C2-Sales Service,C3-Clerical,C4-Sales Clerical Unskilled,D1-Production Specialists,D2-MaintConstRepair Specialists,D3-ProtectTrans Specialists,D4-Blue Collar Unskilled
 aa.oregonOccupations=A1-Mgmt Bus,B1-Prof Specialty,B2-Education,B3-Health,B4-Technical Unskilled,C1-Sales Clerical Professionals,C2-Sales Service,C3-Clerical,C4-Sales Clerical Unskilled,D1-Production Specialists,D2-MaintConstRepair Specialists,D3-ProtectTrans Specialists,D4-Blue Collar Unskilled
 aa.oregonHHtypes=HH0to8k1to2,HH0to8k3plus,HH8to15k1to2,HH8to15k3plus,HH15to23k1to2,HH15to23k3plus,HH23to32k1to2,HH23to32k3plus,HH32to46k1to2,HH32to46k3plus,HH46to61k1to2,HH46to61k3plus,HH61to76k1to2,HH61to76k3plus,HH76to106k1to2,HH76to106k3plus,HH106kUp1to2,HH106kUp3plus
@@ -362,7 +365,19 @@ aa.writeExchangeDerivatives=true
 aa.directExcelInputs=false
 aa.externalZonesInHistogram=false
 aa.writeFlowMatrices=true
+
+# Should probably be set to false in most years, and true in diagnostic years and final year
 aa.createCompressedFlowVisuals=false
+# Should be about the same as the number of virtual processors in the machine (e.g. > 36 for Amazon WS c3.8xlarge instance)
+aa.flowClusterThreads=40
+# Coordinate system for centroid coordinates in PECASZonesI.csv
+aa.flowClusterProjection=epsg:4326
+# How many clusters to make (can be a list, e.g. 300,1000 to get multiple values)
+aa.flowClusterCounts=300,1000
+# More iterations means more optimal clustering but it's pretty slow, could be 20
+# in early diagnostic years and 100 in final horizon year.
+aa.flowClusterIterations = 20
+
 aa.writeAsciiZonalMakeUse=true
 aa.writeBinaryZonalMakeUse=false
 aa.stringsInZonalMakeUse=false
@@ -371,13 +386,14 @@ aa.makeTripMatrices=false
 
 # Run parameters
 aa.logFrequency = 25
-aa.maxIterations = 1200
+aa.maxIterations = 2000
 aa.initialStepSize = .002
 aa.minimumStepSize = .025
 aa.maximumStepSize = 2.5
 aa.localPriceStepSizeAdjustment = 1
 aa.automaticTechnologySizeTerms=true
-aa.maxTotalClearance=0.00005
+aa.maxTotalClearance=0.00001
+# Change to 0.01 or less.
 aa.maxSpecificClearance=0.02
 aa.ConFac=.01
 
@@ -436,10 +452,9 @@ ldt.airport.parking.cost.in.cents = 16.3666796
 # average duration of a multi-day trip, in days, by purpose
 ldt.average.duration.multi-day.trip.by.purpose=2.4,4.6,2.6
 # average auto occupancy, by purpose
-ldt.average.auto.occupancy.by.purpose=2.81,1.22,1.91     
+ldt.average.auto.occupancy.by.purpose=2.81,1.22,1.91
 # taz IDs with major airports
-#ldt.airport.zones=904,1549,1734,2874,3055,2130,2905
-ldt.airport.zones=1
+ldt.airport.zones=904,1549,1734,2874,3055,2130,2905
 
 ldt.binary.choice.person.attribute.class=com.pb.tlumip.pt.ldt.TLUMIPLDBinaryChoicePersonAttributes
 ldt.inex.person.attribute.class=com.pb.tlumip.pt.ldt.TLUMIPLDInternalExternalPersonAttributes
@@ -447,8 +462,8 @@ ldt.external.mode.choice.model.class=com.pb.tlumip.pt.ldt.TLUMIPLDExternalModeCh
 ldt.external.destination.model.class=com.pb.tlumip.pt.ldt.TLUMIPLDExternalDestinationModel
 ldt.internal.external.destination.model.class=com.pb.tlumip.pt.ldt.TLUMIPLDInternalExternalModel
 
-# The skims that LDT uses are hard-coded at the moment.  This is not acceptable. 
-pt.air.peak.skims=pkdairivt,pkdairfar,pkdairfwt,pkdairdrv 
+# The skims that LDT uses are hard-coded at the moment.  This is not acceptable.
+pt.air.peak.skims=pkdairivt,pkdairfar,pkdairfwt,pkdairdrv
 pt.air.offpeak.skims=opdairivt,opdairfar,opdairfwt,opdairdrv
 
 pt.icwt.peak.skims=pkwicrivt,pkwicrfar,pkwicrfwt,pkwicrtwt,pkwicrawk,pkwicrxwk,pkwicrewk
@@ -526,7 +541,7 @@ highway.assign.previous.skim.path=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/
 transit.assign.previous.skim.path=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@TR.LAST.RUN@/
 sdt.previous.employment=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@PT.LAST.RUN@/Employment.csv
 
-## Input files that come from the Current Year simulation 
+## Input files that come from the Current Year simulation
 ## Input files from PI
 pecas.production.sum=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RUN@/laborDollarProductionSum.csv
 pecas.consumption.sum=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RUN@/laborDollarConsumptionSum.csv
@@ -562,7 +577,7 @@ sdt.calculate.sdt=@PT.SDT@
 sdt.calculate.ldt=@PT.LDT@
 
 trace = false
-sdt.trace.itazs = 2337 
+sdt.trace.itazs = 2337
 sdt.trace.jtazs = 290
 sdt.trace.households = 345
 sdt.trace.persons = 256_1
@@ -623,10 +638,6 @@ ta.luce.assignment.parameters = LUCEAssignmentSettings.par
 ta.luce.allperiod.assignment.parameters = LUCEAssignmentSettings_FULL.par
 ta.initial.auto.assignment.parameters = initAutoAssignment.par
 ta.initial.transit.assignment.parameters = initTransitAssignment.par
-
-ta.peak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_PK_PATHS.ver
-ta.offpeak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_OP_PATHS.ver
-                    
 # PATHBASED or LUCE
 ta.assignment.type = PATHBASED
 # PKOP (PEAK+OFFPEAK) or ALL (PEAK+OFFPEAK+PM+NIGHT)
@@ -637,6 +648,7 @@ ta.volume.factor.percentile = 0.9
 
 tr.transit.assignment.intracity.rail.parameters = intracityrailAssignmentSettings.par
 tr.transit.assignment.intercity.rail.parameters = intercityrailAssignmentSettings.par
+
 
 ta.world.zone.distances = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/worldZoneDistances.csv
 ta.skim.matrix.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/hwySkimMatrixNames.csv
