--- a/root/scenario/inputs/t20/globalTemplateUpdate.properties
+++ b/root/scenario/inputs/t20/globalTemplateUpdate.properties
@@ -1,2 +1,2 @@
-#Only copy t19 skims to t18 (so turn it off for all other years)
-ald.copyToPreviousYear = false
+#copy over the new t19 activity locations to t18 (can only do this after AA was run in t19, so at SI in t20)
+ald.copyToPreviousYear = true
