--- a/root/swim_small/inputs/t19/globalTemplateUpdate.properties
+++ b/root/swim_small/inputs/t19/globalTemplateUpdate.properties
@@ -8,4 +8,4 @@ aa.maxSpecificClearance=0.02
 new.zone.system=False
 
 #copy over the new t19 activity locations to t18 (can only do this after AA was run in t19, so at SI in t20)
-ald.copyToPreviousYear = true
+ald.copyToPreviousYear = false
