--- a/root/scenario/inputs/t19/globalTemplateUpdate.properties
+++ b/root/scenario/inputs/t19/globalTemplateUpdate.properties
@@ -5,4 +5,4 @@ aa.readHouseholdsByHHCategory=true
 aa.updateImportsAndExports=true
 
 #copy over the new t19 activity locations to t18 (can only do this after AA was run in t19, so at SI in t20)
-ald.copyToPreviousYear = true
+ald.copyToPreviousYear = false
