LDT airport zones must be in the model zones
update swim small link attributes written out to the VIZ DB parameter file

swim small is running again #36 #43

--- a/root/swim_small/inputs/globalTemplate.properties
+++ b/root/swim_small/inputs/globalTemplate.properties
@@ -452,8 +452,8 @@ ldt.airport.parking.cost.in.cents = 16.3666796
 ldt.average.duration.multi-day.trip.by.purpose=2.4,4.6,2.6
 # average auto occupancy, by purpose
 ldt.average.auto.occupancy.by.purpose=2.81,1.22,1.91
-# taz IDs with major airports
-ldt.airport.zones=904,1549,1734,2874,3055,2130,2905
+# taz IDs with major airports (for SWIM Small)
+ldt.airport.zones=1
 
 ldt.binary.choice.person.attribute.class=com.pb.tlumip.pt.ldt.TLUMIPLDBinaryChoicePersonAttributes
 ldt.inex.person.attribute.class=com.pb.tlumip.pt.ldt.TLUMIPLDInternalExternalPersonAttributes
