Select link module updates to globalTemplate.properties and build_select_link_matrices.py. Alos, dropped sl.numzones and the sl.auto.classes properties. Close #9

--- a/root/swim_small/inputs/globalTemplate.properties
+++ b/root/swim_small/inputs/globalTemplate.properties
@@ -624,6 +624,8 @@ tr.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTER
 ta.demand.output.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@
 ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_small.ver
 ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes.ver
+ta.peak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PK_PATHS.ver
+ta.offpeak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/OP_PATHS.ver
 
 ta.zone.field.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/zoneFieldNames.csv
 ta.link.field.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/linkFieldNames.csv
@@ -665,23 +667,15 @@ sl.select.link.data.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/bu
 sl.select.link.node.sequence.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/get_link_sequence.py
 sl.visum.mode = true
 
-sl.visum.demand.segment.mapping = {'a_peak':2,'a_offpeak':1,'d_peak':6,'d_offpeak':5}
+sl.visum.demand.segment.mapping = {'a_peak':1,'a_offpeak':2,'d_peak':5,'d_offpeak':6}
 
 sl.input.file.select.links = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/selectLinks_small.csv
-#sl.ee.scaling.factor = 0.95
 sl.ee.scaling.factor = 1.00
-
-#TODO: Need to identify the proper values for the properties below
-sl.auto.classes = a_peak,a_peak,a_peak,a_peak
-sl.truck.classes = d_peak,d_peak,d_peak,d_peak
 
 sl.output.file.select.link.results = selectLinkResults.csv
 sl.output.file.select.link.weaving = sl_weaving.csv
 
 sl.output.bundle.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/select_link_outputs.zip
-
-#1hr to daily
-sl.numzones = 18
 
 ################################## VIZ Database Properties ##################################
 viz.activity.constraints = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/ActivityConstraintsI.csv
