add commented-out sl.internal.zone.file property #45

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -671,6 +671,7 @@ sl.visum.demand.segment.mapping = {'a_peak':1,'a_offpeak':2,'d_peak':5,'d_offpea
 
 sl.input.file.select.links = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/selectLinks.csv
 sl.ee.scaling.factor = 1.00
+#sl.internal.zone.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/InternalZones.txt
 
 sl.output.file.select.link.results = selectLinkResults.csv
 sl.output.file.select.link.weaving = sl_weaving.csv
