Add back in the two properties: 'sl.auto.classes' and 'sl.truck.classes'. Close #49

--- a/root/swim_small/inputs/globalTemplate.properties
+++ b/root/swim_small/inputs/globalTemplate.properties
@@ -672,6 +672,10 @@ sl.visum.demand.segment.mapping = {'a_peak':1,'a_offpeak':2,'d_peak':5,'d_offpea
 sl.input.file.select.links = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/selectLinks_small.csv
 sl.ee.scaling.factor = 1.00
 
+#TODO: Need to identify the proper values for the properties below
+sl.auto.classes = a_peak,a_peak,a_peak,a_peak
+sl.truck.classes = d_peak,d_peak,d_peak,d_peak
+
 sl.output.file.select.link.results = selectLinkResults.csv
 sl.output.file.select.link.weaving = sl_weaving.csv
 
