Update for Visum 16
See issue #62

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -11,7 +11,7 @@ scenario.outputs.relative                             = @SCENARIO.NAME@/@SCENARI
 scenario.inputs                                       = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@
 scenario.outputs                                      = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@
 scenario.root                                         = @ROOT.DIR@/@SCENARIO.NAME@
-visum.version                                         = 15
+visum.version                                         = 16
 new.zone.system                                       = False
 
 
@@ -631,15 +631,15 @@ ta.zone.field.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/zo
 ta.link.field.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/linkFieldNames.csv
 ta.zmx.input.files = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/inpZMXFileNames.csv
 ta.assignment.parameters.directory = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum
-ta.path.allperiod.assignment.parameters = pathbasedAssignmentSettings_FULL.par
-ta.initial.auto.assignment.parameters = initAutoAssignment.par
-ta.initial.transit.assignment.parameters = initTransitAssignment.par
+ta.path.allperiod.assignment.parameters = pathbasedAssignmentSettings_FULL.xml
+ta.initial.auto.assignment.parameters = initAutoAssignment.xml
+ta.initial.transit.assignment.parameters = initTransitAssignment.xml
 
 #must be greater than 0 and less than 1 (higher value = higher period capacity)
 ta.volume.factor.percentile = 0.9
 
-tr.transit.assignment.intracity.rail.parameters = intracityrailAssignmentSettings.par
-tr.transit.assignment.intercity.rail.parameters = intercityrailAssignmentSettings.par
+tr.transit.assignment.intracity.rail.parameters = intracityrailAssignmentSettings.xml
+tr.transit.assignment.intercity.rail.parameters = intercityrailAssignmentSettings.xml
 
 
 ta.world.zone.distances = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/worldZoneDistances.csv
