updates to single select link script and properties and module_commands.py changes to run the append_select_link_data.py script if run for a single link. Issue #59

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -665,6 +665,7 @@ sl.taz.data.filename = @ROOT.DIR@/@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/Al
 
 sl.select.link.data.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/build_select_link_matrices.py
 sl.select.link.node.sequence.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/get_link_sequence.py
+sl.append.select.link.data.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/append_select_link_data.py
 sl.visum.mode = true
 
 sl.visum.demand.segment.mapping = {'a_peak':1,'a_offpeak':2,'d_peak':5,'d_offpeak':6}
