Replace multiple CT scripts with single orchestrator
The run_ct.R calls functions in the swimctr package; this package is preinstalled in the SWIM R distribution, and is available at https://github.com/pbsag/swimctr.

This commit also includes new input parameters files for running CT, with appropriate adjustments to the properties files.

--- a/root/swim_small/inputs/globalTemplate.properties
+++ b/root/swim_small/inputs/globalTemplate.properties
@@ -582,11 +582,35 @@ sdt.trace.households = 345
 sdt.trace.persons = 256_1
 
 ################################## CT Properties ##################################
-ct.rcode = CTx4.R
+ct.rcode = run_ct.R
 ct.codePath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/ct/
 ct.property = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/ct.properties
 ct.filePath = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/
 ct.properties.folder = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters
+ct.logfile = ct_run.log
+ct.cluster.logfile = ct_cluster.log
+
+# CT Input files from other modules
+pecas.makeuse = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/MakeUse.csv
+ct.alpha2beta = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/alpha2beta.csv
+pecas.zonal.employment = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/Employment.csv
+ct.distance.skims = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/pktrk1dist.zmx
+ct.travel.time.skims = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/pktrk1time.zmx
+ct.alpha2beta = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/alpha2beta.csv
+ct.synthetic.population = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/SynPop_Taz_Summary.csv
+
+# CT input paramters
+faf.flow.data               = &@SCENARIO.NAME@/inputs/parameters/faf42_oregon.csv.gz
+ct.destination.utilities    = &@SCENARIO.NAME@/inputs/parameters/ct_destination_utilities.csv
+ct.external.gateways        = &@SCENARIO.NAME@/inputs/parameters/ct_external_station_equivalencies.csv
+ct.generation.probabilities = &@SCENARIO.NAME@/inputs/parameters/ct_local_generation_probabilities.csv
+ct.intermodal.connectors    = &@SCENARIO.NAME@/inputs/parameters/ct_intermodal_connectors.csv
+ct.sector.equivalencies     = &@SCENARIO.NAME@/inputs/parameters/ct_sector_categories.csv
+ct.temporal.factors         = &@SCENARIO.NAME@/inputs/parameters/ct_truck_temporal_distributions.csv
+ct.trip.length.targets      = &@SCENARIO.NAME@/inputs/parameters/ct_trip_length_targets.csv
+faf.empty.truck.factors       = &@SCENARIO.NAME@/inputs/parameters/faf35-empty-truck-factors.csv
+faf.truck.allocation.factors  = &@SCENARIO.NAME@/inputs/parameters/faf35-truck-allocation-factors.csv
+faf.truck.equivalency.factors = &@SCENARIO.NAME@/inputs/parameters/faf35-truck-equivalency-factors.csv
 
 ct.random.seed                 = 630730
 ct.extended.trace              = FALSE
