Add additional directory path
Apparently the java orchestrator needs ct.filePath to be outputs/, but the CT package itself needs outputs/year/. This leads to redundant properties that should be resolved in #66

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -585,7 +585,8 @@ sdt.trace.persons = 256_1
 ct.rcode = run_ct.R
 ct.codePath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/ct/
 ct.property = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/ct.properties
-ct.filePath = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
+ct.filePath = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/
+ct.outdir = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 ct.properties.folder = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters
 ct.logfile = ct_run.log
 ct.cluster.logfile = ct_cluster.log
