Making these changes for SWIM small
However, SWIM small still fails in CT, so this might not be the last of them.

--- a/root/swim_small/inputs/globalTemplate.properties
+++ b/root/swim_small/inputs/globalTemplate.properties
@@ -12,7 +12,7 @@ scenario.inputs                                       = @ROOT.DIR@/@SCENARIO.NAM
 scenario.outputs                                      = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@
 scenario.root                                         = @ROOT.DIR@/@SCENARIO.NAME@
 visum.version                                         = 16
-new.zone.system	         			      = False
+new.zone.system                                       = False
 
 
 java.executable      = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
@@ -586,32 +586,34 @@ ct.rcode = run_ct.R
 ct.codePath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/ct/
 ct.property = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/ct.properties
 ct.filePath = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/
+ct.outdir = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 ct.properties.folder = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters
 ct.logfile = ct_run.log
 ct.cluster.logfile = ct_cluster.log
 
 # CT Input files from other modules
-pecas.makeuse = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/MakeUse.csv
-ct.alpha2beta = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/alpha2beta.csv
-pecas.zonal.employment = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/Employment.csv
-ct.distance.skims = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/pktrk1dist.zmx
-ct.travel.time.skims = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/pktrk1time.zmx
-ct.alpha2beta = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/alpha2beta.csv
-ct.synthetic.population = &@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/SynPop_Taz_Summary.csv
+pecas.makeuse = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/MakeUse.csv
+ct.alpha2beta = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/alpha2beta.csv
+pecas.zonal.employment = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/Employment.csv
+ct.distance.skims =@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@TA.LAST.RUN@/pktrk1dist.zmx
+ct.travel.time.skims = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@TA.LAST.RUN@/pktrk1time.zmx
+ct.alpha2beta = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/alpha2beta.csv
+ct.synthetic.population = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SynPop_Taz_Summary.csv
 
 # CT input paramters
-faf.flow.data               = &@SCENARIO.NAME@/inputs/parameters/faf42_oregon.csv.gz
-ct.destination.utilities    = &@SCENARIO.NAME@/inputs/parameters/ct_destination_utilities.csv
-ct.external.gateways        = &@SCENARIO.NAME@/inputs/parameters/ct_external_station_equivalencies.csv
-ct.generation.probabilities = &@SCENARIO.NAME@/inputs/parameters/ct_local_generation_probabilities.csv
-ct.intermodal.connectors    = &@SCENARIO.NAME@/inputs/parameters/ct_intermodal_connectors.csv
-ct.sector.equivalencies     = &@SCENARIO.NAME@/inputs/parameters/ct_sector_categories.csv
-ct.temporal.factors         = &@SCENARIO.NAME@/inputs/parameters/ct_truck_temporal_distributions.csv
-ct.trip.length.targets      = &@SCENARIO.NAME@/inputs/parameters/ct_trip_length_targets.csv
-faf.empty.truck.factors       = &@SCENARIO.NAME@/inputs/parameters/faf35-empty-truck-factors.csv
-faf.truck.allocation.factors  = &@SCENARIO.NAME@/inputs/parameters/faf35-truck-allocation-factors.csv
-faf.truck.equivalency.factors = &@SCENARIO.NAME@/inputs/parameters/faf35-truck-equivalency-factors.csv
+faf.flow.data               = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf42_oregon.csv.gz
+ct.destination.utilities    = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_destination_utilities.csv
+ct.external.gateways        = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_external_station_equivalencies.csv
+ct.generation.probabilities = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_local_generation_probabilities.csv
+ct.intermodal.connectors    = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_intermodal_connectors.csv
+ct.sector.equivalencies     = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_sector_categories.csv
+ct.temporal.factors         = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_truck_temporal_distributions.csv
+ct.trip.length.targets      = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_trip_length_targets.csv
+faf.empty.truck.factors       = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf35-empty-truck-factors.csv
+faf.truck.allocation.factors  = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf35-truck-allocation-factors.csv
+faf.truck.equivalency.factors = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf35-truck-equivalency-factors.csv
 
+faf.external.scaling.factor = 2.5
 ct.random.seed                 = 630730
 ct.extended.trace              = FALSE
 ct.target.week                 = 23
@@ -685,10 +687,11 @@ demand.output.filename = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT
 sl.mode = @SL.MODE@
 sl.current.directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 
-sl.taz.data.filename = @ROOT.DIR@/@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/AllZones.csv
+sl.taz.data.filename = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/AllZones.csv
 
 sl.select.link.data.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/build_select_link_matrices.py
 sl.select.link.node.sequence.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/get_link_sequence.py
+sl.append.select.link.data.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/append_select_link_data.py
 sl.visum.mode = true
 
 sl.visum.demand.segment.mapping = {'a_peak':1,'a_offpeak':2,'d_peak':5,'d_offpeak':6}
