Add threshold properties

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -621,8 +621,8 @@ ct.target.day                  = 4
 ct.weeks.per.year              = 50
 ct.oregon.regions              = 411,419
 ct.external.scaling.factor     = 2.41
-ct.resampling.threshold        = 2.0
 ct.maximum.resampling.attempts = 25
+ct.maximum.resampling.threshold= 0.5
 ct.port.of.portland            = 925
 ct.port.of.coos.bay            = 2129
 ct.pdx.airport                 = 904
