--- a/root/swim_small/inputs/globalTemplate.properties
+++ b/root/swim_small/inputs/globalTemplate.properties
@@ -623,6 +623,7 @@ ct.oregon.regions              = 411,419
 ct.external.scaling.factor     = 2.41
 ct.resampling.threshold        = 75.0
 ct.maximum.resampling.attempts = 25
+ct.maximum.resampling.threshold= 100
 ct.port.of.portland            = 1
 ct.port.of.coos.bay            = 1
 ct.pdx.airport                 = 1
