added functionality to generate SL and non-SL demand matrices. close #68

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -659,6 +659,7 @@ demand.output.filename = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT
 
 ################################## Select Link Properties ##################################
 sl.mode = @SL.MODE@
+sl.add.demand.matrices = true
 sl.current.directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 
 sl.taz.data.filename = @ROOT.DIR@/@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/AllZones.csv
