--- a/root/swim_small/inputs/globalTemplate.properties
+++ b/root/swim_small/inputs/globalTemplate.properties
@@ -659,12 +659,14 @@ demand.output.filename = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT
 
 ################################## Select Link Properties ##################################
 sl.mode = @SL.MODE@
+sl.add.demand.matrices = true
 sl.current.directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 
 sl.taz.data.filename = @ROOT.DIR@/@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/AllZones.csv
 
 sl.select.link.data.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/build_select_link_matrices.py
 sl.select.link.node.sequence.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/get_link_sequence.py
+sl.append.select.link.data.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/append_select_link_data.py
 sl.visum.mode = true
 
 sl.visum.demand.segment.mapping = {'a_peak':1,'a_offpeak':2,'d_peak':5,'d_offpeak':6}
